--- a/Bus/Bus.csproj
+++ b/Bus/Bus.csproj
@@ -141,12 +141,21 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Operator.cs" />
+    <Compile Include="Models\Operatorname.cs" />
     <Compile Include="Models\Route.cs" />
+    <Compile Include="Models\EstimatedTimeOfArrival.cs" />
+    <Compile Include="Models\Routename.cs" />
+    <Compile Include="Models\Stop.cs" />
+    <Compile Include="Models\Stopname.cs" />
+    <Compile Include="Models\Stopposition.cs" />
+    <Compile Include="Models\Subroute.cs" />
+    <Compile Include="Models\Subroutename.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\HMAC_SHA1.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="busGeolocation.html" />
+    <Content Include="busMap.html" />
     <Content Include="busRouteInfo.html" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
@@ -156,7 +165,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="img\bus.png" />
+    <Content Include="Content\Images\bus.png" />
     <Content Include="index.html" />
     <Content Include="js\busGeolocation.js" />
     <Content Include="js\busRouteInfo.js" />
