--- a/Bus/Bus.csproj
+++ b/Bus/Bus.csproj
@@ -141,18 +141,21 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ODataQuery.cs" />
     <Compile Include="Models\Operator.cs" />
-    <Compile Include="Models\Operatorname.cs" />
+    <Compile Include="Models\OperatorName.cs" />
     <Compile Include="Models\Route.cs" />
     <Compile Include="Models\EstimatedTimeOfArrival.cs" />
-    <Compile Include="Models\Routename.cs" />
+    <Compile Include="Models\RouteName.cs" />
     <Compile Include="Models\Stop.cs" />
-    <Compile Include="Models\Stopname.cs" />
-    <Compile Include="Models\Stopposition.cs" />
+    <Compile Include="Models\StopName.cs" />
+    <Compile Include="Models\StopPosition.cs" />
     <Compile Include="Models\Subroute.cs" />
-    <Compile Include="Models\Subroutename.cs" />
+    <Compile Include="Models\SubrouteName.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\HMAC_SHA1.cs" />
+    <Compile Include="Services\BusService.cs" />
+    <Compile Include="Services\PtxService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="busMap.html" />
